# pichayon

./: .gitignore  Dockerfile  docker-compose.yml  package.json  pichayon-api.cfg.sample  pichayon-door.cfg.sample  pichayon-web.cfg.sample  pichayon.cfg.sample  preinstall.sh  pyproject.toml  requirements-rpi.txt  requirements.txt  setup-door.py  setup.py
door-contoller/: pyproject.toml
door-controller/: pichayon  pyproject.toml
pichayon/: caches.py  crypto.py  default_settings.py
pichayon/api/: __init__.py  acl.py  default_settings.py  oauth2.py  renderers.py
pichayon/api/models/: __init__.py  doors.py  groups.py  rooms.py  users.py
pichayon/api/schemas/: __init__.py  authorizations.py  authorizations_temp.py  doors.py  groups.py  rooms.py  users.py
pichayon/api/views/: __init__.py  accounts.py
pichayon/client/: __init__.py  client.py  groups.py  rooms.py  users.py
pichayon/client/common/: base.py  client.py  http_client.py  schemas.py
pichayon/client/resources/: __init__.py  authorizations.py  doors.py  groups.py  rooms.py
pichayon/cmd/: api.py  controller  controller.py  controller_node.py  door_controller.py  web.py
pichayon/controller/: __init__.py  data_resources.py  doors.py  server.py  sparkbit.py
pichayon/controller_node/: __init__.py  data_storage.py  devices.py  keypad.py  rfid.py  server.py
pichayon/door_controller/: __init__.py  data_storage.py  database.py  devices.py  keypad.py  logs.py  rfid.py  server.py
pichayon/door_controller/rfid/: asr1200e.py  rc522.py  readers.py  vguang_m300.py  vguang_sk330.py
pichayon/models/: __init__.py  applications.py  authorizations.py  door_authorizations.py  door_systems.py  doors.py  groups.py  history_logs.py  request_form.py  request_forms.py  rooms.py  users.py
pichayon/node_controller/: keypad.py
pichayon/utils/: config.py  program_options.py  views.py
pichayon/web/: __init__.py  acl.py  default_settings.py  nats.py  oauth2.py  pichayon_client.py  request_context.py
pichayon/web/client/: __init__.py  nats.py  nats_client.py  pichayon_client.py
pichayon/web/forms/: __init__.py  accounts.py  application_remarks.py  applications.py  request_forms.py  rooms.py  student_form.py
pichayon/web/static/: config.js  package-lock.json  package.json
pichayon/web/views/: __init__.py  accounts.py  applications.py  dashboard.py  request_form.py  rooms.py  site.py
scripts/: ansible-inventory.yml  auto-test  cron.sh  install.sh  pichayon-door.service  pichayon-uwsgi-web.ini  pichayon-uwsgi-web.sh  playbook-test.yml  run-api  run-controller  run-controller_node  run-door-controller  run-node-controller  run-web
scripts/ansible/: README.md  ansible-inventory.yml
scripts/ansible-playbooks/: update-repo.yml
scripts/ansible/ansible_playbooks/: deploy-pichayon.yml  (+1 more)
scripts/ansible_playbooks/: deploy-pichayon.yml
(+117 files in other folders)
