[tool.poetry]
name = "pichayon"
version = "0.1.0"
description = "Door Controlling System"
authors = ["Thanathip Limna <boatkrap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.38.4"
nats-py = "^2.2.0"
flask = "^2.2.2"
flask-login = "^0.6.2"
authlib = "^1.1.0"
python-dateutil = "^2.8.2"
flask-mongoengine = "^1.0.0"
requests = "^2.28.1"
brython = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
